fix(card): remove z-index

--- a/packages/client/src/components/list/index.module.scss
+++ b/packages/client/src/components/list/index.module.scss
@@ -98,7 +98,6 @@
       .details {
         position: absolute;
         inset: 0;
-        z-index: 1;
         flex-direction: column;
 
         background: linear-gradient(
